需求FortunePay 支付 OK-2089完成

--- a/app/src/main/assets/MoneyConfigs/RechargeConfig.json
+++ b/app/src/main/assets/MoneyConfigs/RechargeConfig.json
@@ -299,6 +299,17 @@
   },
   {
     "titleNameMap": {
+      "zh": "fortunePay",
+      "en": "fortunePay",
+      "vi": "fortunePay"
+    },
+    "subtitle": "FortunePay支付",
+    "image": "ic_fortunepay",
+    "rechType": "onlinePayment",
+    "onlineType": "212"
+  },
+  {
+    "titleNameMap": {
       "zh": "其他",
       "en": "Others",
       "vi": "Khác"
