--- a/app/src/main/assets/MoneyConfigs/RechargeConfig.json
+++ b/app/src/main/assets/MoneyConfigs/RechargeConfig.json
@@ -312,7 +312,7 @@
     "titleNameMap": {
       "zh": "网银支付",
       "en": "Online Banking",
-      "vi": "Ngân hàng online"
+      "vi": "Online Banking"
     },
     "subtitle": "菲律賓在線網銀",
     "image": "ic_internet_bank",
