--- a/app/src/main/assets/MoneyConfigs/RechargeConfig.json
+++ b/app/src/main/assets/MoneyConfigs/RechargeConfig.json
@@ -310,7 +310,7 @@
   },
   {
     "titleNameMap": {
-      "zh": "网银支付",
+      "zh": "Online Banking",
       "en": "Online Banking",
       "vi": "Online Banking"
     },
