--- a/app/build.gradle
+++ b/app/build.gradle
@@ -426,6 +426,9 @@ dependencies {
     implementation 'com.appsflyer:af-android-sdk:6.9.0'
     implementation "com.miui.referrer:homereferrer:1.0.0.6"
     implementation 'com.github.CarGuo.GSYVideoPlayer:GSYVideoPlayer:v8.3.4-release-jitpack'
+
+    //mmkv
+    implementation 'com.tencent:mmkv:1.2.13'
 }
 repositories {
     mavenCentral()
