--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,9 @@ buildscript {
         kotlin_version = '1.6.20'
         koin_version = '2.2.1'
         nav_version = "2.3.2"
+        version_retrofit = "2.9.0"
+        version_room = "2.4.0-alpha03"
+        compose_version = '1.3.0'
     }
 
     repositories {
