市场打包配置
(cherry picked from commit ebd7857e2b527c7722015c1030818e4127b76079)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -269,7 +269,7 @@
             android:value="${JPUSH_CHANNEL}" />
         <meta-data
             android:name="INVITE_CODE"
-            android:value="" />
+            android:value="${INVITE_CODE}" />
     </application>
 
 </manifest>
