--- a/app/build.gradle
+++ b/app/build.gradle
@@ -190,8 +190,8 @@ dependencies {
 
 //    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.10'
     implementation("androidx.multidex:multidex:2.0.1")
-    debugImplementation 'io.github.didi.dokit:dokitx:3.5.0.1'
-    releaseImplementation 'io.github.didi.dokit:dokitx-no-op:3.5.0.1'
+//    debugImplementation 'io.github.didi.dokit:dokitx:3.5.0.1'
+//    releaseImplementation 'io.github.didi.dokit:dokitx-no-op:3.5.0.1'
 
     implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
