--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,9 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
     <uses-permission android:name="com.google.android.gms.permission.AD_ID" />
+    <!--兼容华为手机，当使用密码管理器时会使用该权限-->
+    <uses-permission android:name="android.permission.INTERACT_ACROSS_USERS"
+        tools:ignore="ProtectedPermissions" />
     <uses-permission
         android:name="android.permission.OBSERVE_GRANT_REVOKE_PERMISSIONS"
         tools:ignore="ProtectedPermissions" /> <!-- Required -->
