--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -264,7 +264,9 @@
             android:name=".ui.promotion.PromotionDetailActivity"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
-
+        <activity
+            android:name=".ui.profileCenter.vip.MyVipDetailActivity"
+            android:screenOrientation="portrait" />
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.provider"
@@ -317,7 +319,8 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.promotion.LuckyWheelActivity"
-            android:screenOrientation="portrait" /> <!-- Since JCore2.0.0 Required SDK核心功能 -->
+            android:screenOrientation="portrait" />
+        <!-- Since JCore2.0.0 Required SDK核心功能 -->
         <!-- 可配置android:process参数将Service放在其他进程中；android:enabled属性不能是false -->
         <!-- 这个是自定义Service，要继承极光JCommonService，可以在更多手机平台上使得推送通道保持的更稳定 -->
         <service
