加快编译配置

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,7 +62,9 @@ android {
         }
 
     }
-
+    dexOptions {
+        javaMaxHeapSize "4g"
+    }
     signingConfigs {
         release {
             storeFile file("key.jks")
