--- a/gradle.properties
+++ b/gradle.properties
@@ -27,6 +27,13 @@ android.enableD8=true
 android.enableAapt2=true
 #??gradle??
 org.gradle.caching=true
+# configuration cache
+org.gradle.unsafe.configuration-cache=true
+org.gradle.unsafe.configuration-cache-problems=warn
+#?????????
+kotlin.incremental.useClasspathSnapshot=true
+#?????????
+kotlin.build.report.output=file
 
 
 #==========OKBET Config===============
