--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,9 @@
     <uses-permission android:name="android.permission.MICROPHONE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.SEND_SMS" />
     <uses-permission android:name="com.google.android.gms.permission.AD_ID" />
+
     <!--兼容华为手机，当使用密码管理器时会使用该权限-->
     <uses-permission android:name="android.permission.INTERACT_ACROSS_USERS"
         tools:ignore="ProtectedPermissions" />
@@ -49,6 +51,7 @@
     <uses-feature
         android:name="android.hardware.camera.autofocus"
         android:required="true" />
+    <queries><provider android:authorities="com.facebook.katana.provider.PlatformProvider" /></queries>
 
     <application
         android:name=".application.MultiLanguagesApplication"
@@ -267,6 +270,9 @@
         <activity
             android:name=".ui.profileCenter.vip.MyVipDetailActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.profileCenter.share.ShareActivity"
+            android:screenOrientation="portrait" />
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.provider"
@@ -343,7 +349,9 @@
                 <category android:name="${JPUSH_PKGNAME}" />
             </intent-filter>
         </receiver>
-
+        <provider android:authorities="com.facebook.app.FacebookContentProvider{FACEBOOK_APP_ID}"
+            android:name="com.facebook.FacebookContentProvider"
+            android:exported="true"/>
         <meta-data
             android:name="JPUSH_CHANNEL"
             android:value="${JPUSH_CHANNEL}" />
