--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ buildscript {
         maven { url "https://jitpack.io" }
         // fcm， 若不集成 FCM 通道，可直接跳过
         maven { url "https://maven.google.com" }
+        maven { url 'https://developer.huawei.com/repo/'}
         gradlePluginPortal()
 
     }
@@ -26,9 +27,12 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.koin:koin-gradle-plugin:$koin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
-        classpath 'com.google.gms:google-services:4.3.15'
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.4'
         classpath 'com.google.protobuf:protobuf-gradle-plugin:0.9.4'
+        // fcm，若不集成 FCM 通道，可直接跳过
+        classpath 'com.google.gms:google-services:4.3.15'
+        // hms，若不集成华为厂商通道，可直接跳过
+        classpath 'com.huawei.agconnect:agcp:1.6.0.300'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -41,6 +45,7 @@ allprojects {
         mavenCentral()
         maven { url 'https://jitpack.io' }
         maven { url "https://maven.google.com" }
+        maven { url 'https://developer.huawei.com/repo/'}
     }
 
 }
