--- a/app/build.gradle
+++ b/app/build.gradle
@@ -346,6 +346,7 @@ dependencies {
     // 接入 FCM 厂商
     implementation 'com.google.firebase:firebase-messaging:23.0.5'
     implementation 'cn.jiguang.sdk.plugin:fcm:4.8.5'
+    implementation 'cn.jiguang.sdk:jmlink:1.3.0'
 
     implementation 'com.github.yuriy-budiyev:code-scanner:2.3.2'
     implementation 'com.github.xuexiangjys:XUpdate:2.1.4'
