--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -154,27 +154,13 @@
             android:exported="true"
             android:screenOrientation="portrait"
             android:theme="@style/lunchTheme">
-            <intent-filter>
-                <data android:scheme="oklink"/>
-                <action android:name="android.intent.action.VIEW" />
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-            </intent-filter>
             <intent-filter android:autoVerify="true">
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data
-                    android:scheme="https"
-                    android:host="bd28s0.jgshare.cn" />
-            </intent-filter>
-            <intent-filter android:autoVerify="true">
-                <action android:name="android.intent.action.VIEW" />
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-                <data
-                    android:scheme="https"
-                    android:host="bd28s0.jmlk.co" />
+                <data android:scheme="https" />
+                <data android:host="download.demosp.vip" /><!-- UAT环境下载页域名-->
+                <data android:host="app.okbet.com" />
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
