增加首充悬浮按钮

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -282,6 +282,11 @@
         <activity
             android:name=".ui.maintab.home.ambassador.AmbassadorActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.maintab.home.firstdeposit.SevenDaysSignInActivity"
+            android:screenOrientation="portrait" />
+
+
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.provider"
