--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -289,6 +289,13 @@
         <activity
             android:name=".ui.maintab.home.ambassador.AmbassadorActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.profileCenter.securityquestion.SettingQuestionActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.login.foget.ForgetPasswordQuestionActivity"
+            android:screenOrientation="portrait" />
+
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.provider"
