--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,8 +19,8 @@ android {
         applicationId "com.okbet.ph"
         minSdk 24
         targetSdk 34
-        versionName OKBET_VERSION_NAME as String
-        versionCode OKBET_VERSION_CODE as int
+        versionName "1.5.23"
+        versionCode 157
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
         ndk {
