--- a/app/build.gradle
+++ b/app/build.gradle
@@ -386,7 +386,7 @@ dependencies {
     // 神策埋点
     implementation ('com.sensorsdata.analytics.android:SensorsAnalyticsSDK:6.8.2') {
         exclude(group:'com.sensorsdata.analytics.android', module:'advert')     // 	广告模块
-        exclude(group:'com.sensorsdata.analytics.android', module:'autoTrack')  // 	全埋点模块
+//        exclude(group:'com.sensorsdata.analytics.android', module:'autoTrack')  // 	全埋点模块
         exclude(group:'com.sensorsdata.analytics.android', module:'encrypt')    // 	加密模块
         exclude(group:'com.sensorsdata.analytics.android', module:'exposure')   // 	曝光模块
         exclude(group:'com.sensorsdata.analytics.android', module:'push')       // 	推送模块
