--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -300,7 +300,12 @@
         <activity
             android:name=".ui.login.foget.ForgetPasswordQuestionActivity"
             android:screenOrientation="portrait" />
-
+        <activity
+            android:name=".ui.profileCenter.identity.handheld.VerifyHandheldActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.profileCenter.identity.handheld.HandheldPhotoActivity"
+            android:screenOrientation="portrait" />
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.provider"
