提款是处理未完全认证的逻辑

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -82,6 +82,7 @@
         <activity
             android:name=".ui.profileCenter.identity.VerifyIdentityActivity"
             android:screenOrientation="portrait"
+            android:launchMode="singleTask"
             android:windowSoftInputMode="adjustResize|stateHidden" />
         <activity
             android:name=".ui.profileCenter.identity.TakeIDPhotoActivity"
